# survivalvolume

./: .gitignore  .travis.yml  CITATION.cff  README.md  dev_install.md  makedocs.sh  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  user_guide.ipynb
.github/workflows/: python-package.yml
docs/: parse.m.html  plot.m.html  user_guide.html
survivalvolume/: parse.py  plot.py
survivalvolume/tests/: test_all.py  test_data.py  test_parse.py  test_plot.py
survivalvolume/tests/data/: Studylogish.xlsx  absolutetvish.xlsx  good_treatment.tsv  other_treatment.tsv  vehicle.tsv
